FindBugs improvements based on suggestions AXIS2-4661[A